make modal responsive

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,24 @@ button {
   width: max-content;
 }
 
-w-order-summary {
-  /* width: 23%; */
+.w-modal {
+  width: 40%;
 }
+
+@media (max-width: 768px) {
+  .w-modal {
+    width: 50%;
+  }
+} 
+
+@media (max-width: 608px) {
+  .w-modal {
+    width: 80%;
+  }
+} 
+
+@media (max-width: 380px) {
+  .w-modal {
+    width: 95%;
+  }
+} 
