--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   min-height: 100vh;
 }
 
-.active{
+.active {
   color: rgb(237, 237, 237);
   background-color: rgb(10, 154, 10);
   border-radius: 3px;
@@ -51,24 +51,26 @@ button {
   width: 40%;
 }
 
+@media (max-width: 850px) {
+  .pad {
+    padding: 0.25rem 0.5rem;
+  }
+}
+
 @media (max-width: 768px) {
   .w-modal {
     width: 50%;
   }
-
-  .pad {
-    padding: 0.25rem 0.5rem ;
-  }
-} 
+}
 
 @media (max-width: 608px) {
   .w-modal {
     width: 80%;
   }
-} 
+}
 
 @media (max-width: 380px) {
   .w-modal {
     width: 95%;
   }
-} 
+}
