--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,11 @@ button {
   .w-modal {
     width: 80%;
   }
+  .active {
+    background-color: rgb(10, 154, 10);
+    border-radius: 3px;
+    padding: 0.25rem 0.5rem;
+  }
 }
 
 @media (max-width: 380px) {
